--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ section {
   overflow: hidden;
 }
 
-#block1 {
+#block-lateral {
   width: 20%;
   align-items: center;
 }
@@ -29,7 +29,7 @@ section {
   gap: 30px;
 }
 
-#block1 .open {
+#block-lateral .open {
   margin: auto;
 }
 
@@ -61,6 +61,7 @@ fieldset legend{
 .Espace-client{
   display: flex;
   gap: 12px;
+  
 }
 
 form{
@@ -94,14 +95,6 @@ footer {
 } 
 
 
-.cta {
-  display: inline-block;
-  background: linear-gradient(#8e86b5, #acaeed);
-  color: white;  
-  border-radius: 50px;
-  padding: 5px 10px;
-}
-
 a:hover{
   text-decoration: underline;
 }
@@ -117,50 +110,8 @@ a:hover{
 
 
 section {
-  padding: 80px;
+  padding: 30px;
 }
 
-
-footer,
-nav {
-width: 100%;
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: space-between;
-}
-
-nav a {
-  margin-left: 30px;
-}
-
-.accueil-photos {
-  background-color: rgb(163, 68, 68);
-  padding: 80px;
-}
-
-.accueil-photos h2 {
-  color: #242424;
-  text-align: center;
-  margin-bottom: 80px;
-}
-
-.accueil-photos div {
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
-  justify-content: center;
-  margin-bottom: 15px;
-}
-
-input[type=email], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
- }
 
 
